[workspace]
members = [
    "src/cli",
    "src/dm2pb",
    "src/dmdoc",
    "src/dreamchecker",
    "src/dreammaker",
    "src/editor",
    "src/interval-tree",
    "src/langserver",
    "src/tools",
]

[profile.dev]
opt-level = 2

[profile.release]
lto = true

[workspace.metadata.raze]
workspace_path = "//bazelbuild/cargo"
genmode = "Remote"
render_package_aliases = false
package_aliases_dir = "."
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
