load("@rules_rust//rust:rust.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "builtins-proc-macro",
    srcs = glob(["*.rs"]),
    edition = "2018",
    deps = [
        "@raze__proc_macro2__1_0_24//:proc_macro2",
        "@raze__quote__1_0_8//:quote",
        "@raze__syn__1_0_60//:syn",
    ],
    crate_type = "proc-macro",
)
