load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//proto:proto.bzl", "rust_proto_library")

proto_library(
    name = "ast_proto",
    srcs = [
        "ast.proto",
    ],
    visibility = ["//visibility:public"],
)

rust_proto_library(
    name = "ast_proto_rust",
    deps = [":ast_proto"],
    visibility = ["//visibility:public"],
)
